# OctoPrint-PSUControl-eWeLink

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  PRIVACY.md  README.md  Taskfile.yml  babel.cfg  diagnose_octoprint.py  pyproject.toml  setup.py
.agent/workflows/: project-context.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  SECURITY.md  TRANSLATIONS.md  TROUBLESHOOTING.md
extras/: psucontrol_ewelink.md
octoprint_psucontrol_ewelink/: __init__.py
octoprint_psucontrol_ewelink/static/js/: psucontrol_ewelink.js
octoprint_psucontrol_ewelink/templates/: psucontrol_ewelink_settings.jinja2
octoprint_psucontrol_ewelink/translations/el/LC_MESSAGES/: messages.mo  messages.po
tests/: test_plugin.py
translations/: messages.pot
translations/el/LC_MESSAGES/: messages.mo
translations/fr/LC_MESSAGES/: messages.mo  messages.po
